<resources>
    <string name="app_name">Reestr SMP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="id">ID</string>
    <string name="name">name</string>
    <string name="kontrol">kontrol</string>
    <string name="data_end">data end</string>
    <string name="data_start">data start</string>
    <string name="data_end_blank">DD-MM-GGGG</string>
    <string name="data_start_blank">DD-MM-GGGG</string>
    <string name="length">length</string>
    <string name="reestrsmp">ReestrSMP</string>
    <string name="ok">OK</string>
    <string name="clear">CLEAR</string>
    <string name="del">DEL</string>
</resources>
